--- a/dev/tests/integration/testsuite/Magento/Framework/View/_files/Magento/ModuleA/view/adminhtml/product/product.css
+++ b/dev/tests/integration/testsuite/Magento/Framework/View/_files/Magento/ModuleA/view/adminhtml/product/product.css
@@ -771,7 +771,7 @@
 }
 
 /*
-    Custom Options
+    Question Options
 -------------------------------------- */
 #product_options_container_top .field-option-title {
     width: 500px;
