--- a/lib/web/css/docs/source/_buttons.less
+++ b/lib/web/css/docs/source/_buttons.less
@@ -859,7 +859,7 @@ button {
 //
 //  ```html
 //  <button class="example-button-15" type="button"><span>Reverted color</span></button>
-//  <button class="example-button-16" type="button"><span>Custom colors</span></button>
+//  <button class="example-button-16" type="button"><span>Question colors</span></button>
 //  ```
 //
 
@@ -952,7 +952,7 @@ button {
 //
 //  ```html
 //  <button class="example-button-17" type="button"><span>Reverted size</span></button>
-//  <button class="example-button-18" type="button"><span>Custom sizes</span></button>
+//  <button class="example-button-18" type="button"><span>Question sizes</span></button>
 //  ```
 //
 
