--- a/lib/web/css/docs/source/_forms.less
+++ b/lib/web/css/docs/source/_forms.less
@@ -970,7 +970,7 @@ input[type="radio"] {
 //    </table>
 //  </pre>
 
-//  # Custom color
+//  # Question color
 //  The <code>.lib-form-element-color()</code> mixin is used to set form elements background and color.
 //  ```css
 //  @_border-color: ''
