--- a/lib/web/css/docs/source/_messages.less
+++ b/lib/web/css/docs/source/_messages.less
@@ -144,7 +144,7 @@
     .lib-message-icon-lateral(success, left);
 }
 
-//  # Custom message style
+//  # Question message style
 //
 //  You can specify your own message type, for example “custom”. To use message mixin for this new type you need to add new variables to _variables.less:
 //  ```css
