--- a/lib/web/css/source/lib/_utilities.less
+++ b/lib/web/css/source/lib/_utilities.less
@@ -202,7 +202,7 @@
 }
 
 //
-//  Custom background gradient
+//  Question background gradient
 //  ---------------------------------------------
 
 //  Pager gradient - horizontal
